# Operational-Analytics-Monitoring-Platform

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_server.py  test_tools.py
src/: __init__.py  mcp_server.py
src/formatters/: __init__.py  context_builder.py
src/proto/: __init__.py  options_order_flow_pb2.py  options_order_flow_pb2_grpc.py
src/storage/: __init__.py  grpc_client.py
src/tools/: __init__.py  options_flow_tool.py  options_monitoring_tool.py
